welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:4: error: value lenght is not a member of Array[Int]
		for (n<-0 to nums.lenght-1){
                                  ^