welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {
  
  if (nums.length<4){
		for (n<-0 to nums.lenght-1){
    	if (nums(n)==9){
      	return true
      }
    }
  }
  
  for (n<-0 to 3){
    if (nums(n)==9){
      return true
    }
  }
  return false
}